[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/ui/BarraSalud/BarraSalud.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.00784314, 0.996078, 0.431373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true

[node name="BarraSalud" type="ProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -48.0
margin_right = 39.0
margin_bottom = -34.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 100.0
rounded = true
percent_visible = false
script = ExtResource( 1 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[connection signal="tween_all_completed" from="TweenVisibilidad" to="." method="_on_TweenVisibilidad_tween_all_completed"]
